--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,13 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+
+    <script type="text/javascript" >
+      window.staticImages = {
+        logo: "<%= image_path('logo.png')%>"
+      }
+    </script>
+    
   </head>
 
   <body>
