--- a/app/assets/stylesheets/api/Navbar.css
+++ b/app/assets/stylesheets/api/Navbar.css
@@ -2,13 +2,14 @@
   display: flex;
   justify-content: center;
   background-color: rgb(247,247,247);
-  height: 110px;
   font-family: Raleway;
 }
 
 .Navbar img {
   width: 80px;
   height: 80px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .Navbar-header {
@@ -42,13 +43,11 @@
     flex-direction: column;
   }
 
-  .Navbar {
-    height: 80px;
-  }
-
   .Navbar img {
     width: 50px;
     height: 50px;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 
   .Navbar-link {
@@ -59,19 +58,38 @@
   .Navbar-items {
     display: none;
   }
+
   .Navbar-items-right {
     margin-left: 0px;
   }
+
   .Navbar-link-toggle {
     align-self: flex-end;
     display: initial;
     position: absolute;
     cursor: pointer;
   }
+
 }
 
-.Navbar-link-toggle-show {
+#Navbar-link-toggle-show {
   display: flex;
-  padding-left: 8px;
-  align-items: flex-start;
+  flex-direction: column;
+  /* align-items: flex-start; */
+}
+
+#Nabbar-link-toggle-show p {
+  display: none;
+}
+
+#Navbar-link-toggle-show button {
+  width: 100%;
+  height: 100%;
+  border: none;
+  font-weight: bold;
+}
+#Navbar-link-toggle-show button:hover{
+  background-color: transparent;
+  border: none;
+  color: Black;
 }
