--- a/app/assets/stylesheets/api/Navbar.css
+++ b/app/assets/stylesheets/api/Navbar.css
@@ -22,20 +22,30 @@
 .Navbar-items {
   display: flex;
   align-items: center;
+  justify-content:flex-start;
+  
 }
 
 .Navbar-items-right {
-  margin-left: 37%;
+  justify-content: flex-end;
+  flex-basis:50%;
 }
 
 .Navbar-link {
-  padding-right: 8px;
+  padding-right: 20px;
   padding-left: 20px;
 }
+
 
 .Navbar-link-toggle {
   display: none;
 }
+
+.Navbar-link-toggle-show {
+  display: flex;
+}
+
+
 
 @media only screen and (max-width: 768px) {
   .Navbar-items,
@@ -70,26 +80,11 @@
     cursor: pointer;
   }
 
-}
-
-#Navbar-link-toggle-show {
+  .Navbar-link-toggle-show {
   display: flex;
-  flex-direction: column;
-  /* align-items: flex-start; */
+  padding-left: 8px;
+  align-items: flex-start;
 }
 
-#Nabbar-link-toggle-show p {
-  display: none;
 }
 
-#Navbar-link-toggle-show button {
-  width: 100%;
-  height: 100%;
-  border: none;
-  font-weight: bold;
-}
-#Navbar-link-toggle-show button:hover{
-  background-color: transparent;
-  border: none;
-  color: Black;
-}
