Navbar done footer image foxing

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
 
     <script type="text/javascript" >
       window.staticImages = {
-        logo: "<%= image_path('logo.png')%>"
+        logo: "<%= image_path('logo.png')%>",
+        github: "<%= image_path('github.png')%>",
       }
     </script>
 
