--- a/app/assets/stylesheets/api/Button.scss
+++ b/app/assets/stylesheets/api/Button.scss
@@ -1,31 +1,37 @@
+/* line 1, /Users/armin/Desktop/Hacks/notable/app/assets/stylesheets/api/Button.scss */
+/* line 3, /Users/armin/Desktop/Hacks/notable/app/assets/stylesheets/api/Button.scss */
 .Hamburgermenu {
-  background-image: image-url("accordion.png");
+  background-image: url(/assets/accordion-bc74b9d21580e21516eaeb0a255beee21d7d418950a62e58552dd83fc58ec140.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-
   width: 19px;
   height: 19px;
 }
 
+/* line 11, /Users/armin/Desktop/Hacks/notable/app/assets/stylesheets/api/Button.scss */
+/* line 13, /Users/armin/Desktop/Hacks/notable/app/assets/stylesheets/api/Button.scss */
 .Navbar-LogIn {
   width: 150px;
   height: 50px;
-  border: 2px solid rgb(75,165,64);
+  border: 2px solid #4ba540;
   border-radius: 6px;
   cursor: pointer;
   transition: background-color 0.5s ease;
   text-align: center;
 }
 
+/* line 21, /Users/armin/Desktop/Hacks/notable/app/assets/stylesheets/api/Button.scss */
+/* line 24, /Users/armin/Desktop/Hacks/notable/app/assets/stylesheets/api/Button.scss */
 .Navbar-LogIn:hover {
-  background-color: rgb(75,165,64);
-  border: 2px solid rgb(75,165,64);
+  background-color: #4ba540;
+  border: 2px solid #4ba540;
   color: white;
   transition: background-color 0.2s ease;
 }
 
-
+/* line 29, /Users/armin/Desktop/Hacks/notable/app/assets/stylesheets/api/Button.scss */
+/* line 32, /Users/armin/Desktop/Hacks/notable/app/assets/stylesheets/api/Button.scss */
 .Navbar-SignUp {
   width: 60px;
   height: 50px;
@@ -36,6 +42,30 @@
   text-align: center;
 }
 
+/* line 39, /Users/armin/Desktop/Hacks/notable/app/assets/stylesheets/api/Button.scss */
+/* line 43, /Users/armin/Desktop/Hacks/notable/app/assets/stylesheets/api/Button.scss */
 .Navbar-SignUp:hover {
-  color: rgb(75,165,64);
+  color: #4ba540;
+}
+
+/* line 47, /Users/armin/Desktop/Hacks/notable/app/assets/stylesheets/api/Button.scss */
+.Demo-Login {
+  height: 50px;
+  width: 150px;
+  background-color: #f7f7f7;
+  text-align: center;
+  font-family: Raleway;
+  font-size: 15px;
+  color: black;
+  font-weight: bold;
+  border: 2px;
+  border-radius: 6px;
+}
+
+.Demo-Login:hover {
+  background-color: #4ba540;
+  color: #f7f7f7;
+  text-align: center;
+  transition: background-color 0.2s ease;
+
 }
