--- a/app/assets/stylesheets/api/Navbar.css
+++ b/app/assets/stylesheets/api/Navbar.css
@@ -23,7 +23,6 @@
   display: flex;
   align-items: center;
   justify-content:flex-start;
-  
 }
 
 .Navbar-items-right {
@@ -36,7 +35,6 @@
   padding-left: 20px;
 }
 
-
 .Navbar-link-toggle {
   display: none;
 }
@@ -45,7 +43,13 @@
   display: flex;
 }
 
+.Greeting-Footer {
+  
+}
 
+/* ############### */
+/* # Media Query # */
+/* ############### */
 
 @media only screen and (max-width: 768px) {
   .Navbar-items,
@@ -81,10 +85,26 @@
   }
 
   .Navbar-link-toggle-show {
-  display: flex;
-  padding-left: 8px;
-  align-items: flex-start;
-}
+    display: flex;
+    padding-left: 8px;
+    align-items: flex-start;
+  }
+
+  .Navbar-link-toggle-show button {
+    border: none;
+    width: inherit;
+    height: inherit;
+    margin-bottom: 10px;
+  }
+
+  .Navbar-link-toggle-show button:hover {
+    background-color: inherit;
+    color: rgb(75,165,64);
+    border: none;
+  }
+
+  .Navbar-link-toggle-show p {
+    display: none;
+  }
 
 }
-
