--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
       window.staticImages = {
         logo: "<%= image_path('logo.png')%>",
         github: "<%= image_path('github.png')%>",
+        gmail: "<%= image_path('gmail.png')%>",
+        linkedin: "<%= image_path('linkedin.png')%>",
+
       }
     </script>
 
