--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
         github: "<%= image_path('github.png')%>",
         gmail: "<%= image_path('gmail.png')%>",
         linkedin: "<%= image_path('linkedin.png')%>",
+        mid1: "<%= image_path('mid1.JPG')%>",
+        mid2: "<%= image_path('mid2.JPG')%>",
+        mid3: "<%= image_path('mid3.JPG')%>",
 
       }
     </script>
