--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
         mid1: "<%= image_path('mid1.JPG')%>",
         mid2: "<%= image_path('mid2.JPG')%>",
         mid3: "<%= image_path('mid3.JPG')%>",
+        dl: "<%= image_path('dl.png')%>",
 
       }
     </script>
