SingIn page css done

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,9 @@
         github: "<%= image_path('github.png')%>",
         gmail: "<%= image_path('gmail.png')%>",
         linkedin: "<%= image_path('linkedin.png')%>",
-        mid1: "<%= image_path('mid1.JPG')%>",
-        mid2: "<%= image_path('mid2.JPG')%>",
-        mid3: "<%= image_path('mid3.JPG')%>",
+        mid1: "<%= image_path('Mid1.png')%>",
+        mid2: "<%= image_path('Mid2.png')%>",
+        mid3: "<%= image_path('Mid3.png')%>",
         dl: "<%= image_path('dl.png')%>",
 
       }
