--- a/app/assets/stylesheets/api/Greeting.scss
+++ b/app/assets/stylesheets/api/Greeting.scss
@@ -1,7 +1,7 @@
 .Greeting {
   display: flex;
   flex-direction: column;
-
+  font-family: Raleway;
 }
 
 .Greeting-Demo-Login {
@@ -26,24 +26,60 @@
 
 .Greeting-Mid-Panel {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: center;
 }
 
-.Greeting-Mid_Panel-Boxes {
+.Greeting-Mid-Panel-1Box {
+  background-color: rgb(247,247,247);
+    color: rgb(75,165,64);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 400px;
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.Greeting-Mid-Panel-1Box img{
+  max-width: 400px;
+  max-height: 200px;
+  margin-right: 30px;
+}
+
+.Greeting-Mid-Panel-2Box {
+  color: rgb(75,165,64);
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  font-family: Raleway;
-  font-weight: bold;
+  height: 400px;
   font-size: 40px;
-
+  font-weight: bold;
 }
 
-.Greeting-Mid-Panel img {
-  margin-top: 50px;
-  margin-bottom: 20px;
+.Greeting-Mid-Panel-2Box img{
+  max-width: 200px;
+  max-height: 200px;
+  margin-bottom: 50px;
+}
+
+.Greeting-Mid-Panel-3Box {
+  color: rgb(75,165,64);
+  background-color: rgb(247,247,247);
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+  height: 400px;
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.Greeting-Mid-Panel-3Box img{
+  max-width: 200px;
+  max-height: 200px;
+  margin-left: 30px;
 }
 
 .Greeting-Footer {
@@ -54,7 +90,6 @@
   align-items: center;
   align-self: center;
   font-family: Raleway;
-  margin-top: 20px;
 }
 
 .Greeting-Footer p {
@@ -66,8 +101,6 @@
   width: 20px;
   height: 20px;
   margin: 20px 20px 20px 0px;
-
-
 }
 
 .Greeting-Footer-Icons {
@@ -77,7 +110,6 @@
 @media only screen and (max-width: 768px) {
 
   .Greeting {
-    background-color:  rgb(75,165,64);
     color: rgb(247,247,247);
   }
 
@@ -101,8 +133,46 @@
     display: none;
   }
 
-  .Greeting-Mid-Panel img {
-    display: none;
+  .Greeting-Mid-Panel-1Box {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+  }
+
+  .Greeting-Mid-Panel-1Box img{
+    max-width: 300px;
+    max-height: 150px;
+    margin-bottom: 30px;
+  }
+
+  .Greeting-Mid-Panel-2Box {
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+  }
+
+  .Greeting-Mid-Panel-2Box img{
+    max-width: 100px;
+    max-height: 100px;
+    margin-bottom: 30px;
+  }
+
+  .Greeting-Mid-Panel-3Box {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+
+  .Greeting-Mid-Panel-3Box img{
+    max-width: 150px;
+    max-height: 150px;
+    margin-bottom: 30px;
+  }
+
+  .Greeting-Footer {
+    justify-content: center;
   }
 
   .Greeting-Footer p {
