--- a/app/assets/stylesheets/api/Button.scss
+++ b/app/assets/stylesheets/api/Button.scss
@@ -1,5 +1,8 @@
 /* line 1, /Users/armin/Desktop/Hacks/notable/app/assets/stylesheets/api/Button.scss */
 /* line 3, /Users/armin/Desktop/Hacks/notable/app/assets/stylesheets/api/Button.scss */
+body button {
+    font-family: Raleway;
+}
 .Hamburgermenu {
   background-image: url(/assets/accordion-bc74b9d21580e21516eaeb0a255beee21d7d418950a62e58552dd83fc58ec140.png);
   background-position: center;
@@ -54,7 +57,6 @@
   width: 150px;
   background-color: #f7f7f7;
   text-align: center;
-  font-family: Raleway;
   font-size: 15px;
   color: black;
   font-weight: bold;
@@ -67,5 +69,21 @@
   color: #f7f7f7;
   text-align: center;
   transition: background-color 0.2s ease;
+}
 
+.Auth-Submit {
+  width: 100%;
+  height: 100%;
+  background-color: #4ba540;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.5s ease;
+  text-align: center;
+}
+
+.Auth-Submit:hover {
+  background-color: #327029;
+  color: white;
+  transition: background-color 0.2s ease;
 }
