--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,12 +18,14 @@
         mid2: "<%= image_path('Mid2.png')%>",
         mid3: "<%= image_path('Mid3.png')%>",
         dl: "<%= image_path('dl.png')%>",
+        new: "<%= image_path('New.png')%>",
 
       }
     </script>
 
    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Libre+Barcode+39+Text|Raleway" rel="stylesheet">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
 
   </head>
