--- a/app/assets/stylesheets/api/Editor.css
+++ b/app/assets/stylesheets/api/Editor.css
@@ -1,3 +1,36 @@
+.Editor {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.Editor-ActionBar {
+  height: 55px;
+  margin: 0px 20px 15px 20px;
+  border-bottom: 1px solid rgb(230,230,230);
+}
+
+.Editor-Quill {
+  margin: 0px 30px 0px 30px;
+}
+
+.Editor-Bottom {
+  background-color: solid white;
+  border-top: 1px solid rgb(230,230,230);
+  height: 50px;
+}
+
+.Title {
+  margin-top: 100px;
+}
+
+.Title1 {
+  margin-top: 0px;
+}
+
+/* /////// Quill ////// */
+
 .ql-toolbar.ql-snow {
   border: none;
   border-bottom: 1px solid rgb(230,230,230);
