--- a/app/assets/stylesheets/api/SideBar.css
+++ b/app/assets/stylesheets/api/SideBar.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   background-color: rgb(26,26,26);
-  width: 240px;
+  min-width: 240px;
   height: 100vh;
   font-family: Roboto;
   color: white;
