--- a/app/assets/stylesheets/api/ShowBar.css
+++ b/app/assets/stylesheets/api/ShowBar.css
@@ -2,4 +2,61 @@
   min-width: 350px;
   border-right: 1px solid rgb(230,230,230);
   background-color: rgb(248,248,248);
+  font-family: Raleway;
+}
+
+.ShowBar-Header {
+  border-bottom: 1px solid rgb(230,230,230);
+  height: 135px;
+}
+
+.ShowBar-Header div{
+  font-weight: bold;
+  font-size: 20px;
+  padding: 30px 20px 0 20px;
+}
+
+.ShowBar {
+  max-height: 100vh;
+  overflow: scroll;
+}
+
+.ShowBar-Header {
+  position: sticky;
+  top: 0;
+  background-color: inherit;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.ShowBar-Header div:last-child{
+  padding-bottom: 15px;
+  font-size: 14px;
+  font-weight: bold;
+    color: rgb(169,169,169);}
+
+.ShowBar-Item-Box {
+  border-bottom: 1px solid rgb(230,230,230);
+  height: 120px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.ShowBar-Item-Title {
+  padding: 20px 25px 10px 25px;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.ShowBar-Item-body {
+  padding: 0px 25px 0px 25px;
+  font-size: 13px;
+}
+
+.ShowBar-Item-Time {
+  padding: 0px 25px 10px 25px;
+  font-size: 13px;
+  color: rgb(169,169,169);
 }
