showbar click setState done

--- a/app/assets/stylesheets/api/Button.scss
+++ b/app/assets/stylesheets/api/Button.scss
@@ -1,7 +1,7 @@
 /* line 1, /Users/armin/Desktop/Hacks/notable/app/assets/stylesheets/api/Button.scss */
 /* line 3, /Users/armin/Desktop/Hacks/notable/app/assets/stylesheets/api/Button.scss */
 body button {
-    font-family: Raleway;
+    font-family: Lato;
 }
 .Hamburgermenu {
   background-image: url(/assets/accordion-bc74b9d21580e21516eaeb0a255beee21d7d418950a62e58552dd83fc58ec140.png);
