--- a/app/assets/stylesheets/api/Editor.css
+++ b/app/assets/stylesheets/api/Editor.css
@@ -21,14 +21,14 @@
 
 .Editor-Quill-Body .ql-container.ql-snow {
   padding-top: 70px;
-  font-family: Raleway;
+  font-family: Lato;
   font-size: 15px;
   font-style: normal;
 }
 
 .Editor-Quill-Title .ql-container.ql-snow {
   padding-top: 0px;
-  font-family: Raleway;
+  font-family: Lato;
   font-size: 30px;
   font-style: normal;
   color: black;
