--- a/app/assets/stylesheets/api/Auth.css
+++ b/app/assets/stylesheets/api/Auth.css
@@ -2,7 +2,7 @@
   height: 100vh;
   width: 100vw;
   background-color: rgb(235,247,239);
-  font-family: Raleway;
+  font-family: Lato;
 }
 
 .Auth-Form {
