--- a/app/assets/stylesheets/api/Greeting.scss
+++ b/app/assets/stylesheets/api/Greeting.scss
@@ -1,7 +1,7 @@
 .Greeting {
   display: flex;
   flex-direction: column;
-  font-family: Raleway;
+  font-family: Lato;
 }
 
 .Greeting-Demo-Login {
@@ -89,7 +89,7 @@
   justify-content: space-between;
   align-items: center;
   align-self: center;
-  font-family: Raleway;
+  font-family: Lato;
 }
 
 .Greeting-Footer p {
