--- a/app/assets/stylesheets/api/Navbar.css
+++ b/app/assets/stylesheets/api/Navbar.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   background-color: rgb(247,247,247);
-  font-family: Raleway;
+  font-family: Lato;
 }
 
 .Navbar img {
