--- a/app/assets/stylesheets/api/ShowBar.css
+++ b/app/assets/stylesheets/api/ShowBar.css
@@ -2,7 +2,7 @@
   min-width: 350px;
   border-right: 1px solid rgb(230,230,230);
   background-color: rgb(248,248,248);
-  font-family: Raleway;
+  font-family: Lato;
 }
 
 .ShowBar-Header {
@@ -11,7 +11,7 @@
 }
 
 .ShowBar-Header div{
-  font-weight: bold;
+  font-weight: 400;
   font-size: 20px;
   padding: 30px 20px 0 20px;
 }
@@ -33,8 +33,8 @@
 .ShowBar-Header div:last-child{
   padding-bottom: 15px;
   font-size: 14px;
-  font-weight: bold;
-    color: rgb(169,169,169);}
+  font-weight: 400;
+  color: rgb(169,169,169);}
 
 .ShowBar-Item-Box {
   border-bottom: 1px solid rgb(230,230,230);
@@ -42,11 +42,12 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  cursor: pointer;
 }
 
 .ShowBar-Item-Title {
   padding: 20px 25px 10px 25px;
-  font-weight: bold;
+  font-weight: 400;
   font-size: 14px;
 }
 
