--- a/app/assets/stylesheets/api/ShowBar.css
+++ b/app/assets/stylesheets/api/ShowBar.css
@@ -5,6 +5,10 @@
   font-family: Lato;
 }
 
+.ShowBar-Item-Box-Selected {
+  background-color: rgb(230,230,230);
+}
+
 .ShowBar-Header {
   border-bottom: 1px solid rgb(230,230,230);
   height: 135px;
