--- a/app/assets/stylesheets/api/ShowBar.css
+++ b/app/assets/stylesheets/api/ShowBar.css
@@ -5,41 +5,36 @@
   font-family: Lato;
 }
 
-.ShowBar-Item-Box-Selected {
-  background-color: rgb(230,230,230);
-}
-
 .ShowBar-Header {
   border-bottom: 1px solid rgb(230,230,230);
   height: 135px;
-}
-
-.ShowBar-Header div{
-  font-weight: 400;
-  font-size: 20px;
-  padding: 30px 20px 0 20px;
-}
-
-.ShowBar {
-  max-height: 100vh;
-  overflow: scroll;
-}
-
-.ShowBar-Header {
   position: sticky;
   top: 0;
+  width: 350;
   background-color: inherit;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-.ShowBar-Header div:last-child{
+.ShowBar-Header div {
+  font-weight: 400;
+  font-size: 20px;
+  padding: 30px 20px 0 20px;
+}
+
+.ShowBar-Header div:last-child {
   padding-bottom: 15px;
   font-size: 14px;
   font-weight: 400;
-  color: rgb(169,169,169);}
+  color: rgb(169,169,169);
+}
 
+.ShowBar-Item-Boxes {
+  max-height: 100vh;
+
+   overflow: scroll;
+}
 .ShowBar-Item-Box {
   border-bottom: 1px solid rgb(230,230,230);
   height: 120px;
@@ -64,4 +59,8 @@
   padding: 0px 25px 10px 25px;
   font-size: 13px;
   color: rgb(169,169,169);
+}
+
+.ShowBar-Item-Box-Selected {
+  background-color: rgb(230,230,230);
 }
