--- a/app/assets/stylesheets/api/ShowBar.css
+++ b/app/assets/stylesheets/api/ShowBar.css
@@ -3,6 +3,7 @@
   border-right: 1px solid rgb(230,230,230);
   background-color: rgb(248,248,248);
   font-family: Lato;
+  overflow: scroll;
 }
 
 .ShowBar-Header {
@@ -14,7 +15,7 @@
   background-color: inherit;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  z-index: 10;
 }
 
 .ShowBar-Header div {
@@ -31,10 +32,9 @@
 }
 
 .ShowBar-Item-Boxes {
-  max-height: 100vh;
 
-   overflow: scroll;
 }
+
 .ShowBar-Item-Box {
   border-bottom: 1px solid rgb(230,230,230);
   height: 120px;
