--- a/app/assets/stylesheets/api/ShowBar.css
+++ b/app/assets/stylesheets/api/ShowBar.css
@@ -1,4 +1,5 @@
 .ShowBar {
+  width: 350px;
   min-width: 350px;
   border-right: 1px solid rgb(230,230,230);
   background-color: rgb(248,248,248);
@@ -31,10 +32,6 @@
   color: rgb(169,169,169);
 }
 
-.ShowBar-Item-Boxes {
-
-}
-
 .ShowBar-Item-Box {
   border-bottom: 1px solid rgb(230,230,230);
   height: 120px;
@@ -46,13 +43,16 @@
 
 .ShowBar-Item-Title {
   padding: 20px 25px 10px 25px;
-  font-weight: 400;
+  font-weight: bold;
   font-size: 14px;
+  overflow: hidden;
 }
 
 .ShowBar-Item-body {
   padding: 0px 25px 0px 25px;
   font-size: 13px;
+  height: 32px;
+  overflow: hidden;
 }
 
 .ShowBar-Item-Time {
