notebook page is rendering the notebooks and action bar shows the current notebook

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
         mid3: "<%= image_path('Mid3.png')%>",
         dl: "<%= image_path('dl.png')%>",
         new: "<%= image_path('New.png')%>",
+        notebook: "<%= image_path('notebook.png')%>",
 
       }
     </script>
