css fix for action bar and sidebar

--- a/app/assets/stylesheets/api/SideBar.css
+++ b/app/assets/stylesheets/api/SideBar.css
@@ -25,6 +25,10 @@
   margin-right: 20px;
 }
 
+.Sidebar-Menu button {
+  margin-bottom: 20px;
+}
+
 .Sidebar-New-Note {
   display: flex;
   align-items: center;
