--- a/app/assets/stylesheets/api/ActionBar.css
+++ b/app/assets/stylesheets/api/ActionBar.css
@@ -1,6 +1,8 @@
 .ActionBar {
   display: flex;
+  height: 100%;
   justify-content: space-between;
+  align-items: center;
   font-family: Lato;
 }
 
