--- a/app/assets/stylesheets/api/Editor.css
+++ b/app/assets/stylesheets/api/Editor.css
@@ -13,6 +13,7 @@
   height: 40px;
   margin: 15px 20px 15px 20px;
   border-bottom: 1px solid rgb(230,230,230);
+  align-self: center;
 }
 
 .Editor-Quill {
