showpage header renders

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,8 @@
         dl: "<%= image_path('dl.png')%>",
         new: "<%= image_path('New.png')%>",
         notebook: "<%= image_path('notebook.png')%>",
+        add: "<%= image_path('add.png')%>",
+
 
       }
     </script>
