--- a/app/assets/stylesheets/api/ShowPage.css
+++ b/app/assets/stylesheets/api/ShowPage.css
@@ -1,4 +1,5 @@
 .ShowPage {
+  min-width: 600px;
   width: 81%;
   margin: 30px auto 0px auto;
   display: flex;
@@ -23,7 +24,7 @@
   justify-content: space-between;
   align-items: center;
   padding-bottom: 17px;
-  border-bottom: 1px solid rgb(26,26,26);
+  border-bottom: 2px solid rgb(26,26,26);
 }
 
 .ShowPage-Header{
