--- a/app/assets/stylesheets/api/Modal.css
+++ b/app/assets/stylesheets/api/Modal.css
@@ -1,4 +1,4 @@
-.Modal_Background {
+.Modal-Background {
   position: absolute;
   height: 100vh;
   width: 100vw;
@@ -6,17 +6,4 @@
   left: 0;
   z-index: 3;
   background-color: rgb(92, 97, 102, 0.5);
-}
-
-.Modal_Foreground {
-  background-color: white;
-  position: fixed;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 5px;
-  box-shadow: 10px 10px 30px #888888;
-  width: 700px;
-  height: 300px;
-  z-index: 4;
 }
