Number of notes fixed and Action Bar menu init

--- a/app/assets/stylesheets/api/ShowPage.css
+++ b/app/assets/stylesheets/api/ShowPage.css
@@ -12,6 +12,10 @@
   color: rgb(75,165,64);
 }
 
+.ShowPage-Add:hover{
+  color: #327029;
+}
+
 .ShowPage-Add img {
   height: 19px;
   width: 19px;
