corner menu css done

--- a/app/assets/stylesheets/api/ActionBar.css
+++ b/app/assets/stylesheets/api/ActionBar.css
@@ -18,3 +18,10 @@
   height: 20px;
   margin: auto;
 }
+
+.ActionBar-Right {
+  height: 25px;
+  width: 25px;
+  padding-left: 10px;
+  cursor: pointer;
+}
