--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,8 @@
         new: "<%= image_path('New.png')%>",
         notebook: "<%= image_path('notebook.png')%>",
         add: "<%= image_path('add.png')%>",
+        dotsMenu: "<%= image_path('dotsMenu.png')%>",
+
 
 
       }
