--- a/app/assets/stylesheets/api/Modal.css
+++ b/app/assets/stylesheets/api/Modal.css
@@ -7,3 +7,13 @@
   z-index: 3;
   background-color: rgb(92, 97, 102, 0.5);
 }
+
+.Menu-ModaL-Background {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  z-index: 3;
+  background-color: transparent;
+}
