--- a/app/assets/stylesheets/api/DeletNote_Modal.css
+++ b/app/assets/stylesheets/api/DeletNote_Modal.css
@@ -10,6 +10,14 @@
   height: 250px;
   z-index: 4;
   color: rgb(100,100,100);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.Delete-Note-Modal-Notif {
+  margin 30 auto;
 }
 
 .Delete-Note-Buttons {
