--- a/app/assets/stylesheets/api/DeletNote_Modal.css
+++ b/app/assets/stylesheets/api/DeletNote_Modal.css
@@ -12,13 +12,21 @@
   color: rgb(100,100,100);
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 
 .Delete-Note-Modal-Notif {
   margin 30 auto;
 }
+
+.Delete-Note-Modal-Notif div:last-child {
+  margin-top: 30px;
+  text-align: center;
+  color :red;
+  font-weight: bolder;
+}
+
 
 .Delete-Note-Buttons {
   display: flex;
