--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,8 @@
     <script type="text/javascript" >
       window.staticImages = {
         logo: "<%= image_path('logo.png')%>",
-        github: "<%= image_path('github.png')%>",
-        gmail: "<%= image_path('gmail.png')%>",
+        github: "<%= image_path('Github.png')%>",
+        gmail: "<%= image_path('Gmail.png')%>",
         linkedin: "<%= image_path('linkedin.png')%>",
         mid1: "<%= image_path('Mid1.png')%>",
         mid2: "<%= image_path('Mid2.png')%>",
